--- a/Ink Canvas/Windows/SettingsViews/SettingsViews/StartupPanel.xaml
+++ b/Ink Canvas/Windows/SettingsViews/SettingsViews/StartupPanel.xaml
@@ -8,154 +8,22 @@
              mc:Ignorable="d" 
              d:DesignHeight="950" d:DesignWidth="640">
     <UserControl.Resources>
-        <!-- 开关样式模板 -->
-        <Style x:Key="ToggleSwitchStyle" TargetType="Border">
-            <Setter Property="Width" Value="48"/>
-            <Setter Property="Height" Value="25"/>
-            <Setter Property="CornerRadius" Value="12"/>
-            <Setter Property="Padding" Value="3,0"/>
-            <Setter Property="Cursor" Value="Hand"/>
-            <Setter Property="VerticalAlignment" Value="Center"/>
-            <Setter Property="HorizontalAlignment" Value="Right"/>
-            <Setter Property="Margin" Value="0,0,15,0"/>
-        </Style>
-        <!-- 下拉框样式模板 -->
-        <Style x:Key="ComboBoxStyle" TargetType="ComboBox">
-            <Setter Property="Background" Value="White"/>
-            <Setter Property="BorderBrush" Value="#e6e6e6"/>
-            <Setter Property="BorderThickness" Value="1"/>
-            <Setter Property="Padding" Value="13,7"/>
-            <Setter Property="FontFamily" Value="Microsoft YaHei UI"/>
-            <Setter Property="FontSize" Value="14"/>
-            <Setter Property="Foreground" Value="#2e3436"/>
-            <Setter Property="VerticalContentAlignment" Value="Center"/>
-            <Setter Property="HorizontalContentAlignment" Value="Left"/>
-            <Setter Property="MinHeight" Value="32"/>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="ComboBox">
-                        <Grid>
-                            <ToggleButton x:Name="ToggleButton"
-                                          Focusable="False"
-                                          IsChecked="{Binding IsDropDownOpen, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}"
-                                          ClickMode="Press"
-                                          Background="Transparent"
-                                          BorderThickness="0"
-                                          HorizontalAlignment="Stretch"
-                                          VerticalAlignment="Stretch">
-                                <ToggleButton.Template>
-                                    <ControlTemplate TargetType="ToggleButton">
-                                        <Border Background="Transparent" 
-                                                HorizontalAlignment="Stretch" 
-                                                VerticalAlignment="Stretch"/>
-                                    </ControlTemplate>
-                                </ToggleButton.Template>
-                            </ToggleButton>
-                            <Border x:Name="Border" 
-                                    Background="{TemplateBinding Background}" 
-                                    BorderBrush="{TemplateBinding BorderBrush}" 
-                                    BorderThickness="{TemplateBinding BorderThickness}" 
-                                    CornerRadius="8"
-                                    IsHitTestVisible="False">
-                                <Grid>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition/>
-                                        <ColumnDefinition Width="Auto"/>
-                                    </Grid.ColumnDefinitions>
-                                    <ContentPresenter Grid.Column="0" 
-                                                      Margin="{TemplateBinding Padding}" 
-                                                      VerticalAlignment="{TemplateBinding VerticalContentAlignment}" 
-                                                      HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                                      Content="{TemplateBinding SelectionBoxItem}"
-                                                      ContentTemplate="{TemplateBinding SelectionBoxItemTemplate}"/>
-                                    <Path x:Name="Arrow" Grid.Column="1" 
-                                          Data="M 0 0 L 5 5 L 10 0 Z" 
-                                          Fill="#9a9996" 
-                                          VerticalAlignment="Center" 
-                                          HorizontalAlignment="Center" 
-                                          Margin="0,0,12,0" 
-                                          Width="10" 
-                                          Height="5"
-                                          Stretch="Uniform"
-                                          IsHitTestVisible="False"/>
-                                </Grid>
-                            </Border>
-                            <Popup x:Name="Popup" 
-                                   Placement="Bottom" 
-                                   PlacementTarget="{Binding ElementName=Border}" 
-                                   AllowsTransparency="True" 
-                                   PopupAnimation="Fade" 
-                                   IsOpen="{Binding IsDropDownOpen, RelativeSource={RelativeSource TemplatedParent}}"
-                                   StaysOpen="False">
-                                <Border Background="White" 
-                                        BorderBrush="#e6e6e6" 
-                                        BorderThickness="1" 
-                                        CornerRadius="8" 
-                                        MaxHeight="300"
-                                        MinWidth="{Binding ActualWidth, ElementName=Border}">
-                                    <Border.Effect>
-                                        <DropShadowEffect BlurRadius="8" Direction="270" ShadowDepth="4" Color="Black" Opacity="0.15"/>
-                                    </Border.Effect>
-                                    <ScrollViewer VerticalScrollBarVisibility="Auto" 
-                                                  HorizontalScrollBarVisibility="Disabled"
-                                                  Padding="4">
-                                        <ItemsPresenter/>
-                                    </ScrollViewer>
-                                </Border>
-                            </Popup>
-                        </Grid>
-                        <ControlTemplate.Triggers>
-                            <Trigger Property="IsMouseOver" Value="True">
-                                <Setter TargetName="Border" Property="BorderBrush" Value="#3584e4"/>
-                            </Trigger>
-                            <Trigger Property="IsFocused" Value="True">
-                                <Setter TargetName="Border" Property="BorderBrush" Value="#3584e4"/>
-                            </Trigger>
-                            <Trigger Property="IsDropDownOpen" Value="True">
-                                <Setter TargetName="Arrow" Property="Data" Value="M 0 5 L 5 0 L 10 5 Z"/>
-                                <Setter TargetName="Border" Property="BorderBrush" Value="#3584e4"/>
-                            </Trigger>
-                            <Trigger Property="IsEnabled" Value="False">
-                                <Setter TargetName="Border" Property="Opacity" Value="0.5"/>
-                            </Trigger>
-                        </ControlTemplate.Triggers>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-        <!-- ComboBoxItem样式 - 符合设置页面风格 -->
-        <Style x:Key="ComboBoxItemStyle" TargetType="ComboBoxItem">
-            <Setter Property="Background" Value="White"/>
-            <Setter Property="Foreground" Value="#2e3436"/>
-            <Setter Property="Padding" Value="13,8"/>
-            <Setter Property="FontFamily" Value="Microsoft YaHei UI"/>
-            <Setter Property="FontSize" Value="14"/>
-            <Setter Property="MinHeight" Value="36"/>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="ComboBoxItem">
-                        <Border x:Name="Border" 
-                                Background="{TemplateBinding Background}" 
-                                Padding="{TemplateBinding Padding}">
-                            <ContentPresenter VerticalAlignment="Center"/>
-                        </Border>
-                        <ControlTemplate.Triggers>
-                            <Trigger Property="IsMouseOver" Value="True">
-                                <Setter TargetName="Border" Property="Background" Value="#f5f5f5"/>
-                            </Trigger>
-                            <Trigger Property="IsSelected" Value="True">
-                                <Setter TargetName="Border" Property="Background" Value="#e1e1e1"/>
-                                <Setter Property="Foreground" Value="#2e3436"/>
-                                <Setter Property="FontWeight" Value="Bold"/>
-                            </Trigger>
-                            <Trigger Property="IsHighlighted" Value="True">
-                                <Setter TargetName="Border" Property="Background" Value="#f5f5f5"/>
-                            </Trigger>
-                        </ControlTemplate.Triggers>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="ComboBoxStyles.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+            <!-- 开关样式模板 -->
+            <Style x:Key="ToggleSwitchStyle" TargetType="Border">
+                <Setter Property="Width" Value="48"/>
+                <Setter Property="Height" Value="25"/>
+                <Setter Property="CornerRadius" Value="12"/>
+                <Setter Property="Padding" Value="3,0"/>
+                <Setter Property="Cursor" Value="Hand"/>
+                <Setter Property="VerticalAlignment" Value="Center"/>
+                <Setter Property="HorizontalAlignment" Value="Right"/>
+                <Setter Property="Margin" Value="0,0,15,0"/>
+            </Style>
+        </ResourceDictionary>
     </UserControl.Resources>
     <ScrollViewer ScrollChanged="ScrollViewerEx_ScrollChanged" IsManipulationEnabled="True" Name="ScrollViewerEx" IsDeferredScrollingEnabled="True" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Disabled" IsTabStop="False" TabIndex="-1" Margin="0,0,2,2">
         <StackPanel Margin="60,12,60,24">
